--- a/doctor_appointment_client/src/index.css
+++ b/doctor_appointment_client/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.link{
+  flex: 4;
+  text-decoration: none;
+  color: inherit;
+}
